load("@crates//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test", "rust_test_suite")
load("//:lints/cargo_lint_sources.bzl", "cargo_lint_sources")

package(default_visibility = ["//visibility:public"])

cargo_lint_sources()

exports_files(["Cargo.toml"])

filegroup(
    name = "contracts_inputs",
    srcs = glob(
        [
            "contracts/*.sol",
            "contracts/**/*.toml",
            "contracts/scripts/*.sh",
            "contracts/test/**/*.sol",
        ],
        # Exclude lib/ - dependencies are provided via Bazel externals
        exclude = ["contracts/lib/**"],
    ) + [
        "contracts/remappings.txt",
    ],
)

filegroup(
    name = "test_fixtures",
    srcs = glob(["test-fixtures/**"]),
)

# Build Solidity contracts using forge to generate ABI JSON files
# The contract artifacts are gitignored, so we must generate them during the build
genrule(
    name = "build_contracts",
    srcs = [
        ":contracts_inputs",
        "@forge_std//:all_files",
        "@forge_std//:root_marker",
        "@openzeppelin_contracts//:all_files",
        "@openzeppelin_contracts//:root_marker",
        "@openzeppelin_contracts_upgradeable//:all_files",
        "@openzeppelin_contracts_upgradeable//:root_marker",
    ],
    outs = [
        "contracts/out/MessageInbox.sol/MessageInbox.json",
        "contracts/out/Nock.sol/Nock.json",
    ],
    cmd = """
    set -e

    # Set up the contracts directory structure in the sandbox
    FORGE=$$(realpath $(location //tools/foundry:forge))
    WORK_DIR=$$(mktemp -d)
    export HOME=$$WORK_DIR
    export SVM_HOME=$$WORK_DIR/.svm
    export FOUNDRY_CACHE_PATH=$$WORK_DIR/.foundry/cache
    mkdir -p $$SVM_HOME $$FOUNDRY_CACHE_PATH
    OUT_DIR=$$PWD/$(@D)
    EXEC_ROOT=$$PWD

    # Resolve external repo roots before leaving the execroot
    set -- $(locations @forge_std//:root_marker)
    FORGE_STD_ROOT=$$(dirname "$$(realpath "$$EXEC_ROOT/$$1")")
    set -- $(locations @openzeppelin_contracts//:root_marker)
    OPENZEPPELIN_ROOT=$$(dirname "$$(realpath "$$EXEC_ROOT/$$1")")
    set -- $(locations @openzeppelin_contracts_upgradeable//:root_marker)
    OPENZEPPELIN_UPGRADEABLE_ROOT=$$(dirname "$$(realpath "$$EXEC_ROOT/$$1")")

    # Copy all contract sources and configs
    # Extract the relative path from the bridge/contracts/ directory
    for f in $(locations :contracts_inputs); do
      # Get the relative path after 'contracts/'
      # Match pattern like: open/crates/bridge/contracts/foo or just contracts/foo
      rel=$$(echo "$$f" | sed -E 's|^(.*bridge)?/?contracts/||')
      if [ -n "$$rel" ]; then
        mkdir -p "$$WORK_DIR/$$(dirname $$rel)"
        cp "$$f" "$$WORK_DIR/$$rel"
      fi
    done

    # Wire Foundry deps from Bazel external repos
    mkdir -p "$$WORK_DIR/lib/forge-std" "$$WORK_DIR/lib/openzeppelin-contracts" "$$WORK_DIR/lib/openzeppelin-contracts-upgradeable"
    cp -R "$$FORGE_STD_ROOT"/. "$$WORK_DIR/lib/forge-std"
    cp -R "$$OPENZEPPELIN_ROOT"/. "$$WORK_DIR/lib/openzeppelin-contracts"
    cp -R "$$OPENZEPPELIN_UPGRADEABLE_ROOT"/. "$$WORK_DIR/lib/openzeppelin-contracts-upgradeable"
    export FOUNDRY_LIBS="[\"$$WORK_DIR/lib\"]"

    cd $$WORK_DIR

    # Run forge build
    $$FORGE build --force --via-ir 2>&1

    # Copy the generated artifacts to Bazel's expected output locations
    # $$OUT_DIR is Bazel's output directory for this genrule
    mkdir -p "$$OUT_DIR/contracts/out/MessageInbox.sol"
    mkdir -p "$$OUT_DIR/contracts/out/Nock.sol"
    cp $$WORK_DIR/out/MessageInbox.sol/MessageInbox.json "$$OUT_DIR/contracts/out/MessageInbox.sol/MessageInbox.json"
    cp $$WORK_DIR/out/Nock.sol/Nock.json "$$OUT_DIR/contracts/out/Nock.sol/Nock.json"

    # Clean up
    rm -rf $$WORK_DIR
    """,
    tools = ["//tools/foundry:forge"],
)

# Build-time code generator for proto files
rust_binary(
    name = "bridge_proto_codegen",
    srcs = ["build.rs"],
    compile_data = glob(
        [
            "proto/**/*.proto",
            "contracts/**/*.sol",
            "contracts/**/*.toml",
        ],
        # Exclude lib/ - dependencies are provided via Bazel externals
        exclude = ["contracts/lib/**"],
    ) + [
        "//tools/foundry:forge",
        "contracts/remappings.txt",
        ":build_contracts",
    ],
    data = glob(["proto/**/*.proto"]),
    edition = "2021",
    # Pass the location of forge and contract files to build.rs via rustc_env
    # $(location ...) gives paths that may contain ${pwd}, which build.rs will expand
    rustc_env = {
        "FORGE_BIN": "$(location //tools/foundry:forge)",
        "MESSAGE_INBOX_SOL": "$(location //crates/bridge:contracts/MessageInbox.sol)",
        "NOCK_SOL": "$(location //crates/bridge:contracts/Nock.sol)",
        "FOUNDRY_TOML": "$(location //crates/bridge:contracts/foundry.toml)",
    },
    deps = all_crate_deps(build = True),
)

# Generate proto sources
genrule(
    name = "generate_bridge_proto",
    srcs = glob(
        [
            "proto/**/*.proto",
            "contracts/**/*.sol",
            "contracts/**/*.toml",
        ],
        # Exclude lib/ - dependencies are provided via Bazel externals
        exclude = ["contracts/lib/**"],
    ) + [
        "contracts/remappings.txt",
        ":build_contracts",
    ],
    outs = [
        "generated/bridge.ingress.v1.rs",
        "generated/bridge.status.v1.rs",
        "generated/bridge.tui.v1.rs",
        "generated/bridge_descriptor.bin",
    ],
    cmd = """
    set -e
    EXEC_ROOT=$$PWD
    CODEGEN_BIN=$$(realpath $(location :bridge_proto_codegen))
    OUT_DIR=$$(dirname $(location generated/bridge.ingress.v1.rs))
    mkdir -p $$OUT_DIR/proto
    # Copy proto files
    for f in $(SRCS); do \
      if echo $$f | grep -q '/proto/'; then \
        rel=$$(echo $$f | sed -E 's|^.*/proto/||'); \
        mkdir -p $$OUT_DIR/proto/$$(dirname $$rel); \
        cp $$f $$OUT_DIR/proto/$$rel; \
      fi; \
    done
    # Copy contract files to maintain directory structure for build.rs
    mkdir -p $$OUT_DIR/contracts
    for f in $(SRCS); do \
      if echo $$f | grep -q '/contracts/'; then \
        rel=$$(echo $$f | sed -E 's|^.*/contracts/||'); \
        mkdir -p $$OUT_DIR/contracts/$$(dirname $$rel); \
        cp $$f $$OUT_DIR/contracts/$$rel; \
      fi; \
    done

    # Copy the pre-built artifacts from :build_contracts
    # These are the JSON files that build.rs needs
    # The outputs are in $(locations :build_contracts) which contains both JSON files
    # Remove any existing out dir first (it may be a symlink or have wrong permissions)
    rm -rf $$OUT_DIR/contracts/out
    mkdir -p $$OUT_DIR/contracts/out/MessageInbox.sol
    mkdir -p $$OUT_DIR/contracts/out/Nock.sol
    for f in $(locations :build_contracts); do \
      if echo $$f | grep -q 'MessageInbox.json$$'; then \
        cp $$f $$OUT_DIR/contracts/out/MessageInbox.sol/MessageInbox.json; \
      elif echo $$f | grep -q 'Nock.json$$'; then \
        cp $$f $$OUT_DIR/contracts/out/Nock.sol/Nock.json; \
      fi; \
    done

    cd $$OUT_DIR
    # Pass explicit paths so bridge_proto_codegen does not have to infer the
    # crate root from the copied contract files.
    PROTOC=$$EXEC_ROOT/$(execpath //tools/protoc:protoc) \
    BRIDGE_MANIFEST_DIR=$$PWD \
    MESSAGE_INBOX_SOL=$$PWD/contracts/MessageInbox.sol \
    NOCK_SOL=$$PWD/contracts/Nock.sol \
    FOUNDRY_TOML=$$PWD/contracts/foundry.toml \
    OUT_DIR=. $$CODEGEN_BIN
    """,
    tools = [
        ":bridge_proto_codegen",
        "//tools/protoc",
    ],
)

BRIDGE_SRCS = glob(["src/**/*.rs"])

BRIDGE_DEPS = [
    "//crates/kernels/bridge:kernels-open-bridge",
    "//crates/nockapp",
    "//crates/nockapp-grpc",
    "//crates/nockchain-libp2p-io",
    "//crates/nockchain-math",
    "//crates/nockchain-types",
    "//crates/nockvm/rust/ibig",
    "//crates/nockvm/rust/nockvm",
    "//crates/noun-serde",
    "//crates/wallet-tx-builder",
    "//crates/zkvm-jetpack",
]

BRIDGE_PROTO_OUTPUTS = [
    ":generated/bridge.ingress.v1.rs",
    ":generated/bridge.status.v1.rs",
    ":generated/bridge.tui.v1.rs",
    ":generated/bridge_descriptor.bin",
]

BRIDGE_COMPILE_DATA = [
    ":generate_bridge_proto",
    ":test_fixtures",
    # Reference genrule outputs by their declared output names
    ":contracts/out/MessageInbox.sol/MessageInbox.json",
    ":contracts/out/Nock.sol/Nock.json",
    "bridge-conf.example.toml",
] + BRIDGE_PROTO_OUTPUTS

BRIDGE_DATA = [
    ":test_fixtures",
    ":contracts/out/MessageInbox.sol/MessageInbox.json",
    ":contracts/out/Nock.sol/Nock.json",
]

BRIDGE_PROC_MACRO_DEPS = [
    "//crates/nockvm/rust/nockvm_macros",
]

BRIDGE_RUSTC_ENV = {
    "OUT_DIR": "../generated",
    "BRIDGE_DESCRIPTOR_BIN": "$(execpath :generated/bridge_descriptor.bin)",
    "BRIDGE_INGRESS_PROTO_RS": "$(execpath :generated/bridge.ingress.v1.rs)",
    "BRIDGE_STATUS_PROTO_RS": "$(execpath :generated/bridge.status.v1.rs)",
    "BRIDGE_TUI_PROTO_RS": "$(execpath :generated/bridge.tui.v1.rs)",
    "MESSAGE_INBOX_JSON": "$(execpath :contracts/out/MessageInbox.sol/MessageInbox.json)",
    "NOCK_JSON": "$(execpath :contracts/out/Nock.sol/Nock.json)",
}

rust_library(
    name = "bridge",
    srcs = BRIDGE_SRCS,
    aliases = aliases(),
    compile_data = BRIDGE_COMPILE_DATA,
    crate_features = ["bazel_build"],
    data = BRIDGE_DATA,
    edition = "2021",
    proc_macro_deps = BRIDGE_PROC_MACRO_DEPS + all_crate_deps(proc_macro = True),
    rustc_env = BRIDGE_RUSTC_ENV,
    deps = BRIDGE_DEPS + all_crate_deps(),
)

rust_binary(
    name = "bridge-bin",
    srcs = ["src/main.rs"],
    aliases = aliases(),
    compile_data = BRIDGE_COMPILE_DATA,
    crate_features = ["bazel_build"],
    data = BRIDGE_DATA,
    edition = "2021",
    proc_macro_deps = BRIDGE_PROC_MACRO_DEPS + all_crate_deps(proc_macro = True),
    rustc_env = BRIDGE_RUSTC_ENV,
    deps = [":bridge"] + BRIDGE_DEPS + all_crate_deps(),
)

rust_binary(
    name = "bridge-deploy",
    srcs = ["src/main.rs"],
    aliases = aliases(),
    compile_data = BRIDGE_COMPILE_DATA + [
        "//tools/zig:zig_cc_linker_script",
        "@rules_zig//zig:resolved_toolchain",
    ],
    crate_features = ["bazel_build"],
    data = BRIDGE_DATA,
    edition = "2021",
    platform = "//tools/platforms:linux_x86_64",
    proc_macro_deps = BRIDGE_PROC_MACRO_DEPS + all_crate_deps(proc_macro = True),
    rustc_env = BRIDGE_RUSTC_ENV,
    rustc_flags = [
        "-Clinker=tools/zig/zig_cc_linker.sh",
        "-Ctarget-cpu=x86-64-v3",
    ],
    tags = ["manual"],
    deps = [":bridge"] + BRIDGE_DEPS + all_crate_deps(),
)

rust_binary(
    name = "nockchain-bridge-tui",
    srcs = ["src/bin/nockchain-bridge-tui.rs"],
    aliases = aliases(),
    crate_features = ["bazel_build"],
    edition = "2021",
    deps = [
        ":bridge",
        "//crates/nockapp",
        "//crates/nockapp-grpc",
        "//crates/nockchain-math",
        "//crates/zkvm-jetpack",
    ] + all_crate_deps(),
)

# Unit tests for bridge
rust_test(
    name = "bridge_unit_tests",
    size = "small",
    timeout = "moderate",
    crate = ":bridge",
    crate_features = ["bazel_build"],
    data = [
        ":contracts/out/MessageInbox.sol/MessageInbox.json",
        ":contracts/out/Nock.sol/Nock.json",
    ],
    rustc_env = {
        "MESSAGE_INBOX_JSON": "$(execpath :contracts/out/MessageInbox.sol/MessageInbox.json)",
        "NOCK_JSON": "$(execpath :contracts/out/Nock.sol/Nock.json)",
    },
    deps = all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
)

# Integration tests for bridge
rust_library(
    name = "bridge_test_harness",
    srcs = ["tests/test_harness.rs"],
    crate_features = ["bazel_build"],
    crate_root = "tests/test_harness.rs",
    edition = "2021",
    deps = [
        ":bridge",
        "//crates/nockchain-math",
        "//crates/nockchain-types",
        "//crates/nockvm/rust/ibig",
    ] + all_crate_deps(
        normal = True,
    ),
)

# The targets below are declared only when their test sources exist, so this
# BUILD file works unchanged in checkouts that do not include some of these
# test files.
_BRIDGE_ROSWELL_HARNESS_SRCS = glob(
    ["tests/roswell_harness.rs"],
    allow_empty = True,
)

_BRIDGE_HOLD_TEST_SRCS = glob(
    ["tests/hold_tests.rs"],
    allow_empty = True,
)

_BRIDGE_WITHDRAWAL_TEST_SRCS = glob(
    ["tests/withdrawal_tests.rs"],
    allow_empty = True,
)

# Roswell kernel harness for integration tests that avoid mocks.
[
    rust_library(
        name = "bridge_roswell_harness",
        srcs = _BRIDGE_ROSWELL_HARNESS_SRCS,
        crate_features = ["bazel_build"],
        crate_root = "tests/roswell_harness.rs",
        edition = "2021",
        proc_macro_deps = [
            "//crates/nockvm/rust/nockvm_macros",
        ] + all_crate_deps(
            proc_macro = True,
            proc_macro_dev = True,
        ),
        deps = [
            "//crates/kernels/roswell:kernels-roswell",
            "//crates/nockapp",
            "//crates/nockvm/rust/nockvm",
            "//crates/noun-serde",
            "//crates/zkvm-jetpack",
        ] + all_crate_deps(
            normal = True,
            normal_dev = True,
        ),
    )
    for _ in _BRIDGE_ROSWELL_HARNESS_SRCS
]

rust_test_suite(
    name = "bridge_integration_tests",
    timeout = "short",
    srcs = glob(
        ["tests/**/*.rs"],
        # failover_tests.rs depends on test_harness.rs as a module; rust_test_suite
        # generates one rust_test per file with only that file in `srcs`, which
        # breaks module resolution under Bazel.
        exclude = [
            "tests/core_runner_integration.rs",
            "tests/failover_tests.rs",
            "tests/harness/**/*.rs",
            "tests/hold_tests.rs",
            "tests/roswell_harness.rs",
            "tests/test_harness.rs",
            "tests/withdrawal_tests.rs",
        ],
    ),
    compile_data = ["bridge-conf.example.toml"],
    crate_features = ["bazel_build"],
    data = [
        ":contracts/out/MessageInbox.sol/MessageInbox.json",
        ":contracts/out/Nock.sol/Nock.json",
    ],
    edition = "2021",
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
    rustc_env = {
        "MESSAGE_INBOX_JSON": "$(execpath :contracts/out/MessageInbox.sol/MessageInbox.json)",
        "NOCK_JSON": "$(execpath :contracts/out/Nock.sol/Nock.json)",
    },
    deps = [
        ":bridge",
        ":bridge_test_harness",
        "//crates/kernels/bridge:kernels-open-bridge",
        "//crates/nockapp",
        "//crates/nockchain-math",
        "//crates/nockchain-types",
        "//crates/nockvm/rust/ibig",
        "//crates/nockvm/rust/nockvm",
        "//crates/noun-serde",
        "//crates/zkvm-jetpack",
    ] + ([":bridge_roswell_harness"] if _BRIDGE_ROSWELL_HARNESS_SRCS else []) + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
)

# hold_tests.rs runs the full Roswell hold suite and exceeds Bazel's 60s "short"
# timeout on Apple Silicon even when it passes, so define it explicitly with a
# more accurate timeout budget instead of weakening the test logic.
[
    rust_test(
        name = "hold_tests_test",
        timeout = "moderate",
        srcs = _BRIDGE_HOLD_TEST_SRCS,
        crate_features = ["bazel_build"],
        crate_root = "tests/hold_tests.rs",
        data = [
            ":contracts/out/MessageInbox.sol/MessageInbox.json",
            ":contracts/out/Nock.sol/Nock.json",
        ],
        edition = "2021",
        proc_macro_deps = all_crate_deps(
            proc_macro = True,
            proc_macro_dev = True,
        ),
        rustc_env = {
            "MESSAGE_INBOX_JSON": "$(execpath :contracts/out/MessageInbox.sol/MessageInbox.json)",
            "NOCK_JSON": "$(execpath :contracts/out/Nock.sol/Nock.json)",
        },
        deps = [
            ":bridge",
            ":bridge_roswell_harness",
            ":bridge_test_harness",
            "//crates/nockchain-math",
            "//crates/nockchain-types",
            "//crates/nockvm/rust/ibig",
        ] + all_crate_deps(
            normal = True,
            normal_dev = True,
        ),
    )
    for _ in _BRIDGE_HOLD_TEST_SRCS
]

# withdrawal_tests.rs runs the full Roswell withdrawal suite, so keep it out of
# the short generic integration suite just like hold_tests.rs.
[
    rust_test(
        name = "withdrawal_tests_test",
        timeout = "moderate",
        srcs = _BRIDGE_WITHDRAWAL_TEST_SRCS,
        crate_features = ["bazel_build"],
        crate_root = "tests/withdrawal_tests.rs",
        data = [
            ":contracts/out/MessageInbox.sol/MessageInbox.json",
            ":contracts/out/Nock.sol/Nock.json",
        ],
        edition = "2021",
        proc_macro_deps = all_crate_deps(
            proc_macro = True,
            proc_macro_dev = True,
        ),
        rustc_env = {
            "MESSAGE_INBOX_JSON": "$(execpath :contracts/out/MessageInbox.sol/MessageInbox.json)",
            "NOCK_JSON": "$(execpath :contracts/out/Nock.sol/Nock.json)",
        },
        deps = [
            ":bridge",
            ":bridge_roswell_harness",
            ":bridge_test_harness",
            "//crates/nockchain-math",
            "//crates/nockchain-types",
            "//crates/nockvm/rust/ibig",
        ] + all_crate_deps(
            normal = True,
            normal_dev = True,
        ),
    )
    for _ in _BRIDGE_WITHDRAWAL_TEST_SRCS
]

# core_runner_integration.rs depends on tests/harness/in_memory_ports.rs as a module.
# rust_test_suite creates one rust_test per file with only that file in srcs, so we
# define this test explicitly to include the module source.
rust_test(
    name = "bridge_core_runner_integration_test",
    timeout = "short",
    srcs = [
        "tests/core_runner_integration.rs",
        "tests/harness/in_memory_ports.rs",
    ],
    crate_features = ["bazel_build"],
    crate_root = "tests/core_runner_integration.rs",
    data = [
        ":contracts/out/MessageInbox.sol/MessageInbox.json",
        ":contracts/out/Nock.sol/Nock.json",
    ],
    edition = "2021",
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
    rustc_env = {
        "MESSAGE_INBOX_JSON": "$(execpath :contracts/out/MessageInbox.sol/MessageInbox.json)",
        "NOCK_JSON": "$(execpath :contracts/out/Nock.sol/Nock.json)",
    },
    deps = [
        ":bridge",
        "//crates/nockapp",
        "//crates/nockchain-math",
        "//crates/nockchain-types",
        "//crates/nockvm/rust/ibig",
        "//crates/noun-serde",
    ] + all_crate_deps(
        normal = True,
    ),
)

# failover_tests.rs uses bridge_test_harness crate when bazel_build feature is enabled.
rust_test(
    name = "bridge_failover_tests",
    timeout = "short",
    srcs = ["tests/failover_tests.rs"],
    crate_features = ["bazel_build"],
    crate_root = "tests/failover_tests.rs",
    data = [
        ":contracts/out/MessageInbox.sol/MessageInbox.json",
        ":contracts/out/Nock.sol/Nock.json",
    ],
    edition = "2021",
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
    rustc_env = {
        "MESSAGE_INBOX_JSON": "$(execpath :contracts/out/MessageInbox.sol/MessageInbox.json)",
        "NOCK_JSON": "$(execpath :contracts/out/Nock.sol/Nock.json)",
    },
    tags = ["restrict_bridge_integration_tests"],
    deps = [
        ":bridge",
        ":bridge_test_harness",
        "//crates/nockchain-math",
        "//crates/nockchain-types",
        "//crates/nockvm/rust/ibig",
    ] + all_crate_deps(
        normal = True,
    ),
)
