load("@crates//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
load("//:lints/cargo_lint_sources.bzl", "cargo_lint_sources")

package(default_visibility = ["//visibility:public"])

cargo_lint_sources()

exports_files(["Cargo.toml"])

rust_library(
    name = "habit",
    srcs = glob(["src/**/*.rs"]),
    aliases = aliases(),
    edition = "2021",
    deps = all_crate_deps(),
)

rust_test(
    name = "habit_unit_tests",
    size = "small",
    timeout = "short",
    crate = ":habit",
    deps = all_crate_deps(normal_dev = True),
)
