load("@crates//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")
load("//:lints/cargo_lint_sources.bzl", "cargo_lint_sources")

package(default_visibility = ["//visibility:public"])

cargo_lint_sources()

exports_files(["Cargo.toml"])

rust_library(
    name = "hoon_lib",
    srcs = ["src/lib.rs"],
    aliases = aliases(),
    crate_name = "hoon",
    edition = "2021",
    deps = [
        "//crates/hoonc:hoonc_lib",
        "//crates/nockapp",
        "//crates/nockvm/rust/nockvm",
        "//crates/zkvm-jetpack",
    ] + all_crate_deps(),
)

rust_binary(
    name = "hoon",
    srcs = ["src/main.rs"],
    aliases = aliases(),
    edition = "2021",
    deps = [
        ":hoon_lib",
        "//crates/nockapp",
        "//crates/nockvm/rust/nockvm",
        "//crates/zkvm-jetpack",
    ] + all_crate_deps(),
)
