load("@crates//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")
load("//:lints/cargo_lint_sources.bzl", "cargo_lint_sources")

# load("//:rules_rust_ext/pgo.bzl", "rust_pgo_binary_instrument", "rust_pgo_binary_run", "rust_pgo_binary_optimize")
load("//rules_rust_ext:defs.bzl", "rust_test_with_miri")

package(default_visibility = ["//visibility:public"])

cargo_lint_sources()

exports_files(["Cargo.toml"])

rust_library(
    name = "hoonc_lib",
    srcs = glob(
        ["src/**/*.rs"],
        exclude = ["src/main.rs"],
    ),
    aliases = aliases(),
    compile_data = [
        "bootstrap/hoonc-prewarm.jam",
        "bootstrap/hoonc.jam",
        "//hoon/apps/hoonc:hoonc.hoon",
        "//crates/hoonc/hoon:hoon-138.hoon",
    ],
    crate_name = "hoonc",
    edition = "2021",
    proc_macro_deps = [
        "//crates/nockvm/rust/nockvm_macros",
    ] + all_crate_deps(proc_macro = True),
    deps = [
        "//crates/nockapp",
        "//crates/nockvm/rust/nockvm",
    ] + all_crate_deps(),
)

rust_binary(
    name = "hoonc_bin",
    srcs = glob(["src/**/*.rs"]),
    aliases = aliases(),
    compile_data = [
        "bootstrap/hoonc-prewarm.jam",
        "bootstrap/hoonc.jam",
        "//hoon/apps/hoonc:hoonc.hoon",
        "//crates/hoonc/hoon:hoon-138.hoon",
    ],
    crate_features = ["no_check_oom"],
    crate_name = "hoonc",
    crate_root = "src/main.rs",
    edition = "2021",
    proc_macro_deps = [
        "//crates/nockvm/rust/nockvm_macros",
    ] + all_crate_deps(proc_macro = True),
    deps = [
        ":hoonc_lib",
        "//crates/nockapp",
        "//crates/nockvm/rust/nockvm",
    ] + all_crate_deps(),
)

# Unit tests for hoonc library
rust_test(
    name = "hoonc_unit_tests",
    size = "small",
    crate = ":hoonc_lib",
    data = [
        "bootstrap/hoonc.jam",
        "bootstrap/hoonc-prewarm.jam",
        "//crates/hoonc/hoon:hoon-138.hoon",
        "//hoon/apps/hoonc:hoonc.hoon",
    ],
    proc_macro_deps = [
        "//crates/nockvm/rust/nockvm_macros",
    ] + all_crate_deps(proc_macro = True),
    deps = [
        ":hoonc_lib",
        "//crates/nockapp",
        "//crates/nockvm/rust/nockvm",
    ] + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
)

rust_test_with_miri(
    name = "hoonc_unit_tests_miri",
    size = "small",
    crate = ":hoonc_lib",
    data = [
        "bootstrap/hoonc.jam",
        "bootstrap/hoonc-prewarm.jam",
        "//crates/hoonc/hoon:hoon-138.hoon",
        "//hoon/apps/hoonc:hoonc.hoon",
    ],
    proc_macro_deps = [
        "//crates/nockvm/rust/nockvm_macros",
    ] + all_crate_deps(proc_macro = True),
    deps = [
        ":hoonc_lib",
        "//crates/nockapp",
        "//crates/nockvm/rust/nockvm",
    ] + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
)

# Integration tests for hoonc
rust_test(
    name = "hoonc_integration_tests",
    size = "small",
    srcs = glob(
        ["tests/**/*.rs"],
        allow_empty = True,
    ),
    aliases = aliases(),
    data = [
        "bootstrap/hoonc.jam",
        "bootstrap/hoonc-prewarm.jam",
        "//crates/hoonc/hoon:hoon-138.hoon",
        "//hoon/apps/hoonc:hoonc.hoon",
    ],
    edition = "2021",
    proc_macro_deps = [
        "//crates/nockvm/rust/nockvm_macros",
    ] + all_crate_deps(proc_macro = True),
    deps = [
        ":hoonc_lib",
        "//crates/nockapp",
        "//crates/nockvm/rust/nockvm",
    ] + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
)

# 1) build the instrumented binary
# rust_pgo_binary_instrument(
#     name = "hoonc_instr",
#     srcs = glob(["src/**/*.rs"]),
#     compile_data = [
#         "bootstrap/hoonc-prewarm.jam",
#         "bootstrap/hoonc.jam",
#         "//hoon/apps/hoonc:hoonc.hoon",
#         "//crates/hoonc/hoon:hoon-138.hoon",
#     ],
#     crate_name = "hoonc",
#     edition = "2021",
#     proc_macro_deps = [
#         "//crates/nockvm/rust/nockvm_macros",
#     ] + all_crate_deps(proc_macro = True),
#     deps = [
#         ":hoonc_lib",
#         "//crates/nockapp",
#         "//crates/nockvm/rust/nockvm",
#     ] + all_crate_deps(),
#     crate_root = "src/main.rs",
# )

# rust_pgo_binary_run(
#     name = "hoonc_prof",
#     instr_bin = ":hoonc_instr",
#     corpus = [
#         "bootstrap/hoonc-prewarm.jam",
#         "bootstrap/hoonc.jam",
#         "//hoon/apps/hoonc:hoonc.hoon",
#         "//crates/hoonc/hoon:hoon-138.hoon",
#     ],
#     args = [
#         "--new", "--arbitrary",
#         "crates/hoonc/hoon/hoon-138.hoon",
#         "crates/hoonc/hoon",
#     ],
# )

# rust_pgo_binary_optimize(
#     name = "build_hoonc_pgo",
#     srcs = glob(["src/**/*.rs"]),
#     compile_data = [
#         ":hoonc_prof",
#         "bootstrap/hoonc-prewarm.jam",
#         "bootstrap/hoonc.jam",
#         "//hoon/apps/hoonc:hoonc.hoon",
#         "//crates/hoonc/hoon:hoon-138.hoon",
#     ],
#     crate_name = "hoonc",
#     edition = "2021",
#     proc_macro_deps = [
#         "//crates/nockvm/rust/nockvm_macros",
#     ] + all_crate_deps(proc_macro = True),
#     deps = [
#         ":hoonc_lib",
#         "//crates/nockapp",
#         "//crates/nockvm/rust/nockvm",
#     ] + all_crate_deps(),
#     profdata = ":hoonc_prof",
#     crate_root = "src/main.rs",
# )
