load("@crates//:defs.bzl", "aliases")
load("@rules_rust//rust:defs.bzl", "rust_library")
load("//:lints/cargo_lint_sources.bzl", "cargo_lint_sources")

package(default_visibility = ["//visibility:public"])

cargo_lint_sources()

rust_library(
    name = "kernels",
    srcs = glob(["src/**/*.rs"]),
    aliases = aliases(),
    compile_data = [
        "//assets:dumb",
        "//assets:wal",
        "//assets:miner",
    ],
    crate_features = [
        "bazel_build",
        "wallet",
        "dumb",
        "miner",
    ],
    edition = "2021",
    rustc_env = {
        "WALLET_JAM_PATH": "$(location //assets:wal)",
        "DUMB_JAM_PATH": "$(location //assets:dumb)",
        "MINER_JAM_PATH": "$(location //assets:miner)",
    },
    deps = [
    ],
)
