load("@crates//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")
load("//:lints/cargo_lint_sources.bzl", "cargo_lint_sources")

package(default_visibility = ["//visibility:public"])

cargo_lint_sources()

exports_files(["Cargo.toml"])

filegroup(
    name = "proto_files",
    srcs = glob(["proto/**/*.proto"]),
)

# Build-time code generator to run `tonic_prost_build` from our existing build.rs
rust_library(
    name = "nockapp_grpc_codegen_lib",
    srcs = ["build.rs"],
    aliases = aliases(),
    crate_root = "build.rs",
    edition = "2021",
    deps = all_crate_deps(
        build = True,
        normal = True,
    ),
)

rust_binary(
    name = "nockapp_grpc_codegen",
    srcs = ["build.rs"],
    aliases = aliases(),
    compile_data = glob(["proto/**/*.proto"]),
    crate_root = "build.rs",
    data = glob(["proto/**/*.proto"]),
    edition = "2021",
    deps = [
        ":nockapp_grpc_codegen_lib",
    ] + all_crate_deps(
        build = True,
        proc_macro = True,
    ),
)

# Generate prost/tonic sources and descriptor into a single output directory
genrule(
    name = "generate_nockapp_proto",
    srcs = glob(["proto/**/*.proto"]),
    outs = [
        "generated/nockchain.common.v1.rs",
        "generated/nockchain.common.v2.rs",
        "generated/nockchain.monitoring.v1.rs",
        "generated/nockchain.private.v1.rs",
        "generated/nockchain.public.v1.rs",
        "generated/nockchain.public.v2.rs",
        "generated/nockapp_descriptor.bin",
    ],
    cmd = """
    EXEC_ROOT=$$PWD
    CODEGEN_BIN=$$(realpath $(location :nockapp_grpc_codegen))
    OUT_DIR=$$(dirname $(location generated/nockapp_descriptor.bin))
    mkdir -p $$OUT_DIR/proto
    for f in $(SRCS); do \
      rel=$$(echo $$f | sed -E 's|^.*/proto/||'); \
      mkdir -p $$OUT_DIR/proto/$$(dirname $$rel); \
      cp $$f $$OUT_DIR/proto/$$rel; \
    done
    cd $$OUT_DIR
    PROTOC=$$EXEC_ROOT/$(execpath //tools/protoc:protoc) \
    OUT_DIR=. $$CODEGEN_BIN
    # Ensure descriptor exists
    test -f nockapp_descriptor.bin
    """,
    tools = [
        ":nockapp_grpc_codegen",
        "//tools/protoc",
    ],
)

rust_library(
    name = "nockapp-grpc",
    srcs = glob(["src/**/*.rs"]),
    aliases = aliases(),
    # Make generated proto sources and descriptor available at compile time
    compile_data = [":generate_nockapp_proto"],
    crate_name = "nockapp_grpc_proto",
    edition = "2021",
    proc_macro_deps = [
        "//crates/nockvm/rust/nockvm_macros",
    ] + all_crate_deps(proc_macro = True),
    rustc_env = {
        "OUT_DIR": "../generated",
    },
    deps = [
        "//crates/nockapp",
        "//crates/nockchain-math",
        "//crates/nockchain-types",
        "//crates/nockvm/rust/nockvm",
        "//crates/noun-serde",
    ] + all_crate_deps(),
)

# Unit tests for nockchain-libp2p-io
