load("@crates//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
load("//:lints/cargo_lint_sources.bzl", "cargo_lint_sources")

package(default_visibility = ["//visibility:public"])

cargo_lint_sources()

exports_files(["Cargo.toml"])

rust_library(
    name = "nockapp-grpc",
    srcs = glob([
        "src/**/*.rs",
        "src/*.rs",
    ]),
    aliases = aliases(),
    edition = "2021",
    proc_macro_deps = [
        "//crates/nockvm/rust/nockvm_macros",
    ] + all_crate_deps(proc_macro = True),
    deps = [
        "//crates/nockapp",
        "//crates/nockapp-grpc-proto:nockapp-grpc",
        "//crates/nockchain-libp2p-io",
        "//crates/nockchain-math",
        "//crates/nockchain-types",
        "//crates/nockvm/rust/ibig",
        "//crates/nockvm/rust/nockvm",
        "//crates/noun-serde",
    ] + all_crate_deps(),
)

rust_test(
    name = "nockapp_grpc_unit_tests",
    size = "small",
    timeout = "short",
    crate = ":nockapp-grpc",
)
