[package]
name = "nockapp-grpc"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"

[features]
default = ["server"]
server = []
client = []

[dependencies]

anyhow = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
gnort = { workspace = true }
hex = { workspace = true }
ibig = { workspace = true }
nockapp = { workspace = true }
nockapp-grpc-proto = { workspace = true }
nockchain-math = { workspace = true }
nockchain-types = { workspace = true }
nockvm = { workspace = true }
nockvm_macros = { workspace = true }
noun-serde = { workspace = true }
once_cell = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net"] }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
tonic-prost = { workspace = true }
tonic-reflection = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "ansi"] }

[build-dependencies]
prost-build = { workspace = true }
tonic-build = { workspace = true }
tonic-prost-build = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
