load("@crates//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
load("//:lints/cargo_lint_sources.bzl", "cargo_lint_sources")
load(
    "//crates/nockapp:nockapp_tests.bzl",
    "nockapp_boot_pma_skip_args",
    "nockapp_boot_pma_test_args",
    "nockapp_unit_rust_test",
)
load("//rules_rust_ext:defs.bzl", "rust_test_with_miri")

package(default_visibility = ["//visibility:public"])

cargo_lint_sources()

exports_files(["Cargo.toml"])

# Embedded Diesel migrations are read by a proc macro at compile time.
_NOCKAPP_MIGRATION_SRCS = glob(["migrations/**/*.sql"])

_NOCKAPP_TEST_SRCS = glob([
    "src/**/*.rs",
    "src/*.rs",
])

_NOCKAPP_TEST_COMPILE_DATA = _NOCKAPP_MIGRATION_SRCS + [
    "//assets:dumb",
    "//crates/nockapp/test-jams:cue-test.jam",
    "//crates/nockapp/test-jams:test-ker.jam",
]

_NOCKAPP_TEST_PROC_MACRO_DEPS = [
    "//crates/nockvm/rust/nockvm_macros",
] + all_crate_deps(proc_macro = True)

_NOCKAPP_TEST_DEPS = all_crate_deps(
    normal = True,
    normal_dev = True,
) + [
    "//crates/nockvm/rust/ibig",
    "//crates/nockvm/rust/nockvm",
    "//crates/noun-serde",
]

_NOCKAPP_PMA_REGRESSION_DATA = ["//crates/nockapp/test-jams:test-ker.jam"]

_NOCKAPP_PMA_REGRESSION_PROC_MACRO_DEPS = [
    "//crates/nockvm/rust/nockvm_macros",
] + all_crate_deps(proc_macro = True)

_NOCKAPP_PMA_REGRESSION_DEPS = [
    ":nockapp",
    "//crates/nockvm/rust/nockvm",
] + all_crate_deps()

rust_library(
    name = "nockapp",
    srcs = _NOCKAPP_TEST_SRCS,
    aliases = aliases(),
    compile_data = _NOCKAPP_MIGRATION_SRCS,
    crate_features = [
        "default",
        "slog-tracing",
    ],
    data = [
        "//crates/nockapp/test-jams:cue-test.jam",
        "//crates/nockapp/test-jams:test-ker.jam",
    ],
    edition = "2021",
    proc_macro_deps = [
        "//crates/nockvm/rust/nockvm_macros",
    ] + all_crate_deps(proc_macro = True),
    deps = [
        "//crates/nockvm/rust/ibig",
        "//crates/nockvm/rust/nockvm",
        "//crates/noun-serde",
    ] + all_crate_deps(),
)

nockapp_unit_rust_test(
    name = "nockapp_unit_tests",
    size = "small",
    timeout = "moderate",
    args = nockapp_boot_pma_skip_args(),
)

rust_test(
    name = "nockapp_pma_regression_tests",
    size = "small",
    srcs = glob([
        "tests/pma_regressions.rs",
        "tests/pma_regressions/**/*.rs",
    ]),
    aliases = aliases(),
    crate_root = "tests/pma_regressions.rs",
    data = _NOCKAPP_PMA_REGRESSION_DATA,
    edition = "2021",
    proc_macro_deps = _NOCKAPP_PMA_REGRESSION_PROC_MACRO_DEPS,
    deps = _NOCKAPP_PMA_REGRESSION_DEPS,
)

nockapp_unit_rust_test(
    name = "nockapp_boot_pma_tests",
    timeout = "long",
    args = nockapp_boot_pma_test_args(),
)

rust_test_with_miri(
    name = "nockapp_unit_tests_miri",
    size = "small",
    timeout = "moderate",
    srcs = _NOCKAPP_TEST_SRCS,
    aliases = aliases(),
    args = nockapp_boot_pma_skip_args(),
    compile_data = _NOCKAPP_TEST_COMPILE_DATA,
    crate_features = [
        "bazel_build",
        "default",
        "slog-tracing",
    ],
    crate_root = "src/lib.rs",
    data = _NOCKAPP_TEST_COMPILE_DATA,
    edition = "2021",
    proc_macro_deps = _NOCKAPP_TEST_PROC_MACRO_DEPS,
    rustc_env = {
        # rust_test compiles from bazel-out; point Diesel's embed_migrations!
        # at the compile_data tree instead of the source-tree manifest dir.
        "CARGO_MANIFEST_DIR": "$(BINDIR)/crates/nockapp",
        "DUMB_JAM_PATH": "$(location //assets:dumb)",
    },
    deps = _NOCKAPP_TEST_DEPS,
)

# Integration tests for nockapp if they exist
# For test targets without a proper crate root, we need to specify them individually
rust_test(
    name = "nockapp_integration_test",
    size = "small",
    srcs = ["tests/integration.rs"],
    aliases = aliases(),
    crate_features = [
        "default",
        "slog-tracing",
    ],
    crate_root = "tests/integration.rs",
    data = [
        "//crates/nockapp/test-jams:cue-test.jam",
        "//crates/nockapp/test-jams:test-ker.jam",
    ],
    edition = "2021",
    proc_macro_deps = [
        "//crates/nockvm/rust/nockvm_macros",
    ] + all_crate_deps(proc_macro = True),
    deps = [
        ":nockapp",
        "//crates/nockvm/rust/ibig",
        "//crates/nockvm/rust/nockvm",
    ] + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
)
