load("@crates//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary")
load("//:lints/cargo_lint_sources.bzl", "cargo_lint_sources")

package(default_visibility = ["//visibility:public"])

cargo_lint_sources()

exports_files(["Cargo.toml"])

rust_binary(
    name = "nockchain-api",
    srcs = glob(["src/**/*.rs"]),
    aliases = aliases(),
    edition = "2021",
    deps = [
        "//crates/chaff",
        "//crates/kernels/dumb:kernels-open-dumb",
        "//crates/nockapp",
        "//crates/nockchain:nockchain-lib",
        "//crates/nockvm/rust/nockvm",
        "//crates/zkvm-jetpack",
    ] + all_crate_deps(),
)

# # Unit tests
# rust_test(
#     name = "nockchain_backbone_tests",
#     crate = ":nockchain-backbone-lib",
# )
