load("@crates//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary")
load("//:lints/cargo_lint_sources.bzl", "cargo_lint_sources")

package(default_visibility = ["//visibility:public"])

cargo_lint_sources()

exports_files(["Cargo.toml"])

SEQUENCER_DAEMON_SRCS = ["src/main.rs"]

SEQUENCER_CTL_SRCS = ["src/bin/nockchain-bridge-sequencer-ctl.rs"]

SEQUENCER_DAEMON_DEPS = [
    "//crates/bridge",
    "//crates/nockapp",
    "//crates/nockchain:nockchain-lib",
    "//crates/nockvm/rust/nockvm",
    "//crates/zkvm-jetpack",
]

SEQUENCER_CTL_DEPS = [
    "//crates/bridge",
]

rust_binary(
    name = "nockchain-bridge-sequencer",
    srcs = SEQUENCER_DAEMON_SRCS,
    aliases = aliases(),
    edition = "2021",
    deps = SEQUENCER_DAEMON_DEPS + all_crate_deps(),
)

rust_binary(
    name = "nockchain-bridge-sequencer-ctl",
    srcs = SEQUENCER_CTL_SRCS,
    aliases = aliases(),
    edition = "2021",
    deps = SEQUENCER_CTL_DEPS + all_crate_deps(),
)

# Deploy-specific binary: link via Zig (cargo-zigbuild style) for a reproducible
# Linux artifact compatible with the bridge deploy hosts.
rust_binary(
    name = "nockchain-bridge-sequencer-deploy",
    srcs = SEQUENCER_DAEMON_SRCS,
    aliases = aliases(),
    compile_data = [
        "//tools/zig:zig_cc_linker_script",
        "@rules_zig//zig:resolved_toolchain",
    ],
    edition = "2021",
    platform = "//tools/platforms:linux_x86_64",
    rustc_flags = [
        "-Clinker=tools/zig/zig_cc_linker.sh",
        "-Ctarget-cpu=x86-64-v3",
    ],
    tags = ["manual"],
    deps = SEQUENCER_DAEMON_DEPS + all_crate_deps(),
)

rust_binary(
    name = "nockchain-bridge-sequencer-ctl-deploy",
    srcs = SEQUENCER_CTL_SRCS,
    aliases = aliases(),
    compile_data = [
        "//tools/zig:zig_cc_linker_script",
        "@rules_zig//zig:resolved_toolchain",
    ],
    edition = "2021",
    platform = "//tools/platforms:linux_x86_64",
    rustc_flags = [
        "-Clinker=tools/zig/zig_cc_linker.sh",
        "-Ctarget-cpu=x86-64-v3",
    ],
    tags = ["manual"],
    deps = SEQUENCER_CTL_DEPS + all_crate_deps(),
)
