[package]
name = "nockchain-bridge-sequencer"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"

[features]
default = []
tracing-heap = ["tracy-client"]
jemalloc = ["tikv-jemallocator"]

[dependencies]
bridge = { path = "../bridge" }
clap.workspace = true
nockapp.workspace = true
nockchain.workspace = true
nockvm.workspace = true
tikv-jemallocator = { workspace = true, optional = true }
tokio.workspace = true
tracing.workspace = true
tracy-client = { workspace = true, optional = true }
zkvm-jetpack.workspace = true
