load("@crates//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")
load("//:lints/cargo_lint_sources.bzl", "cargo_lint_sources")

package(default_visibility = ["//visibility:public"])

cargo_lint_sources()

rust_library(
    name = "nockchain-e2e-lib",
    srcs = glob(
        ["src/**/*.rs"],
        exclude = ["src/main.rs"],
    ),
    aliases = aliases(),
    crate_name = "nockchain_e2e",
    edition = "2021",
    deps = [
        "//crates/nockapp",
        "//crates/nockapp-grpc-proto:nockapp-grpc",
        "//crates/nockchain:nockchain-lib",
        "//crates/nockchain-math",
        "//crates/nockchain-testkit",
        "//crates/nockchain-types",
        "//crates/nockvm/rust/nockvm",
        "//crates/noun-serde",
    ] + all_crate_deps(),
)

rust_binary(
    name = "nockchain-e2e",
    srcs = ["src/main.rs"],
    aliases = aliases(),
    edition = "2021",
    deps = [
        ":nockchain-e2e-lib",
        "//crates/nockapp-grpc-proto:nockapp-grpc",
        "//crates/nockchain-testkit",
        "//crates/nockchain-types",
    ] + all_crate_deps(),
)

rust_test(
    name = "nockchain-e2e_unit_tests",
    crate = ":nockchain-e2e-lib",
)
