load("@crates//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary")
load("//:lints/cargo_lint_sources.bzl", "cargo_lint_sources")

package(default_visibility = ["//visibility:public"])

cargo_lint_sources()

exports_files(["Cargo.toml"])

rust_binary(
    name = "nockchain-explorer-tui",
    srcs = ["src/main.rs"],
    aliases = aliases(),
    edition = "2021",
    deps = [
        "//crates/nockapp-grpc",
        "//crates/nockapp-grpc-proto:nockapp-grpc",
        "//crates/nockchain-math",
        "//crates/nockchain-types",
    ] + all_crate_deps(),
)
